# weather-cli

./: .env.example  .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt  test.py  utils.py
