[project]
name = "weather-cli"
version = "0.1.0"
description = "A CLI app for checking weather"
authors = [
    {name = "Yang Di",email = "yang.di2015@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
